--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://t43456.github.io/Dashboard",
+  "proxy": "http://localhost:8002/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
